Wed Jul 12 02:21:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/msvc_static_order.lst:
          Build ObjRefTemplate before IORInterceptor

Tue Jul 11 23:09:28 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * include/makeinclude/platform_hpux_aCC.GNU:

          The C compiler doesn't support the -mt option.  So, add -mt to
          CC_THR_DEFS and then later add CC_THR_DEFS to CCFLAGS.  CCFLAGS
          isn't used when compiling C files.

Tue Jul 11 22:30:21 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ace/config-win32-common.h:
        * ace/config-WinCE.h: Break the tight tie between UNICODE and
          ACE_USES_WCHAR I introduced in
          Thu Oct  6 17:56:19 2005  Steve Huston  <shuston@riverace.com>
          Now ACE_USES_WCHAR is always on for CE; non-CE Windows builds must
          explicitly set ACE_USES_WCHAR independent of UNICODE. Thanks to
          Russell Morra <russell_mora at symantec dot com> for explaining
          the situation and submitting this fix.

Tue Jul 11 22:20:14 UTC 2006  Steve Huston  <shuston@riverace.com>

        * bin/generate_doxygen.pl: Add the ability to put the generated
          HTML output in a specified location using the new -html_output
          command line option. It alters the path specified for the
          HTML_OUTPUT and GENERATE_TAGFILE Doxygen options.

Tue Jul 11 22:09:56 UTC 2006  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_linux.GNU: Added support for the
          "buildbits=64" and "buildbits=32" make settings to target
          32- and 64-bit build targets, respectively. Thanks to Boris
          Kaminer <boris dor kaminer at gmail dot com> for this addition.

Tue Jul 11 22:22:04 UTC 2006  Steve Huston  <shuston@riverace.com>

        * configure.ac: Change the minimum automake version to 1.9.6; this is
          required to generate Makefiles that work properly on AIX.
